--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         }
     },
     "require": {
-        "fzaninotto/faker": "~1.5"
+        "fzaninotto/faker": "^1.15"
     },
     "license": "MIT",
     "authors": [
