Attempts another version constraint

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         }
     },
     "require": {
-        "fzaninotto/faker": "^1.15"
+        "fzaninotto/faker": "~1.10"
     },
     "license": "MIT",
     "authors": [
