--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         }
     },
     "require": {
-        "fzaninotto/faker": "~1.10"
+        "fakerphp/faker": "~v1.10.0"
     },
     "license": "MIT",
     "authors": [
